--- a/contracts/package.json
+++ b/contracts/package.json
@@ -13,17 +13,18 @@
     "clean": "hardhat clean"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
+    "axios": "^1.13.2",
+    "chai": "^4.3.7",
+    "ethers": "^6.9.0",
     "hardhat": "^2.19.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.5",
-    "typechain": "^8.3.0",
-    "chai": "^4.3.7",
-    "ethers": "^6.9.0"
+    "typechain": "^8.3.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.0",
